[project]
name = "pogema-toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.19.2",
    "pydantic>=2.0.0",
    "pytest>=6.2.5",
    "pettingzoo",
    "tabulate>=0.8.7",
    "gymnasium==0.28.1"
    ]

[tool.uv.sources]
pogema = { git = "https://github.com/kei18/pogema" }
